// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppBar Main app bar 1`] = `
<div
  className="ButtonAppBar-root-1"
>
  <header
    className="MuiPaper-root-14 MuiPaper-shadow4-20 MuiAppBar-root-7 MuiAppBar-positionStatic-10 MuiAppBar-colorPrimary-12 ButtonAppBar-appBar-5"
  >
    <div
      className="MuiToolbar-root-41 MuiToolbar-gutters-42"
    >
      <h1
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiTypography-colorInherit-62 ButtonAppBar-flex-2"
      >
        MIWF
      </h1>
      <div>
        <button
          aria-haspopup="true"
          aria-owns={null}
          className="MuiButtonBase-root-76 MuiIconButton-root-67 MuiIconButton-colorContrast-69"
          disabled={false}
          id="menu-appbar-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-73"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-78 MuiIconButton-icon-74"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-79"
          />
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Cards Content card 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div>
    <h1>
       Content 
    </h1>
  </div>
</div>
`;

exports[`Storyshots Cards Simple card 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Title
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    fdsa
  </div>
</div>
`;

exports[`Storyshots Empty Data Playground 1`] = `
<div>
  No data
</div>
`;

exports[`Storyshots HighlightBox Account Total 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <h1>
      $7,749.34
    </h1>
    <hr
      className="MuiDivider-root-353 MuiDivider-default-354"
    />
    <ul
      className="MuiList-root-358 MuiList-padding-359"
    >
      <li
        className="MuiListItem-root-362 MuiListItem-gutters-369 MuiListItem-default-365"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-372"
        >
          <h3
            className="MuiTypography-root-43 MuiTypography-subheading-50 MuiListItemText-text-375"
          >
            $7,000.00 Invested Total
          </h3>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Annulized Percentage Return 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Annulized Percentage Return
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <h1>
      3.75%
    </h1>
    <hr
      className="MuiDivider-root-353 MuiDivider-default-354"
    />
    <ul
      className="MuiList-root-358 MuiList-padding-359"
    >
      <li
        className="MuiListItem-root-362 MuiListItem-gutters-369 MuiListItem-default-365"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-372"
        >
          <h3
            className="MuiTypography-root-43 MuiTypography-subheading-50 MuiListItemText-text-375"
          >
            $774.90 Total Shares Owneed
          </h3>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Account Total
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <h1>
      $1234.56
    </h1>
    <hr
      className="MuiDivider-root-353 MuiDivider-default-354"
    />
    <ul
      className="MuiList-root-358 MuiList-padding-359"
    >
      <li
        className="MuiListItem-root-362 MuiListItem-gutters-369 MuiListItem-default-365"
        disabled={false}
      >
        <div
          className="MuiListItemText-root-372"
        >
          <h3
            className="MuiTypography-root-43 MuiTypography-subheading-50 MuiListItemText-text-375"
          >
            $7,000.00 Invested Total
          </h3>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots HighlightBox Simple 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Stuff
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <h1>
      More stuff
    </h1>
    <hr
      className="MuiDivider-root-353 MuiDivider-default-354"
    />
    <ul
      className="MuiList-root-358 MuiList-padding-359"
    />
  </div>
</div>
`;

exports[`Storyshots InvestBucket Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Risk 1
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <ul
      className="MuiList-root-358 MuiList-padding-359"
    >
      <li
        className="MuiListItem-root-362 MuiListItem-gutters-369 MuiListItem-default-365"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-78 MuiListItemIcon-root-377"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-372"
          id="attr"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-43 MuiTypography-subheading-50 MuiListItemText-text-375"
          >
            Good to get started
          </h3>
        </div>
      </li>
      <li
        className="MuiListItem-root-362 MuiListItem-gutters-369 MuiListItem-default-365"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-78 MuiListItemIcon-root-377"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <div
          className="MuiFormControl-root-378"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          required={false}
        >
          <div
            className="MuiInput-root-382 MuiInput-formControl-383 MuiInput-inkbar-384 MuiInput-underline-388"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-391 MuiInput-inputSingleline-394"
              defaultValue={undefined}
              disabled={false}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={undefined}
              required={undefined}
              rows={undefined}
              type="text"
              value="Low risk"
            />
          </div>
        </div>
      </li>
      <li
        className="MuiListItem-root-362 MuiListItem-gutters-369 MuiListItem-default-365"
        disabled={false}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-78 MuiListItemIcon-root-377"
          focusable="false"
          onClick={[Function]}
          viewBox="0 0 24 24"
        >
          <path
            d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
          />
        </svg>
        <div
          autoFocus={true}
          className="MuiListItemText-root-372"
          id="attr"
          onClick={[Function]}
        >
          <h3
            className="MuiTypography-root-43 MuiTypography-subheading-50 MuiListItemText-text-375"
          >
            Low reward
          </h3>
        </div>
      </li>
    </ul>
    <button
      aria-label="add"
      className="MuiButtonBase-root-76 MuiButton-root-339 MuiButton-raised-346 MuiButton-fab-352 MuiButton-raisedPrimary-348"
      disabled={false}
      id="launch-edit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-341"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-78"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
  <div
    className="MuiCardActions-root-397"
  >
    <button
      className="MuiButtonBase-root-76 MuiButton-root-339 MuiButton-flatPrimary-342 MuiButton-dense-340 MuiCardActions-action-398"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-341"
      >
        Invest
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Loading Linear 1`] = `
<div>
  <div
    className="MuiCircularProgress-root-317 MuiCircularProgress-primaryColor-318"
    role="progressbar"
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svgIndeterminate-320"
      viewBox="0 0 50 50"
    >
      <circle
        className="MuiCircularProgress-circle-322 MuiCircularProgress-circleIndeterminate-323"
        cx={25}
        cy={25}
        fill="none"
        r={20}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Page Test page 1`] = `
<div>
  <div>
    <div
      className="ButtonAppBar-root-1"
    >
      <header
        className="MuiPaper-root-104 MuiPaper-shadow4-110 MuiAppBar-root-97 MuiAppBar-positionStatic-100 MuiAppBar-colorPrimary-102 ButtonAppBar-appBar-5"
      >
        <div
          className="MuiToolbar-root-131 MuiToolbar-gutters-132"
        >
          <h1
            className="MuiTypography-root-133 MuiTypography-headline-138 MuiTypography-colorInherit-152 ButtonAppBar-flex-2"
          >
            MIWF
          </h1>
          <div>
            <button
              aria-haspopup="true"
              aria-owns={null}
              className="MuiButtonBase-root-166 MuiIconButton-root-157 MuiIconButton-colorContrast-159"
              disabled={false}
              id="menu-appbar-button"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiIconButton-label-163"
              >
                <svg
                  aria-hidden="true"
                  className="MuiSvgIcon-root-168 MuiIconButton-icon-164"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root-169"
              />
            </button>
          </div>
        </div>
      </header>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": 10,
        "paddingTop": "70.5px",
      }
    }
  >
    <div
      className="MuiGrid-typeContainer-180 MuiGrid-spacing-xs-16-201"
    >
      <div
        className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216"
      >
        <div
          align="stretch"
          className="MuiGrid-typeContainer-180 MuiGrid-spacing-xs-16-201"
        >
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-3-233"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Current balance
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <h1>
                  $1300
                </h1>
                <hr
                  className="MuiDivider-root-276 MuiDivider-default-277"
                />
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-3-233"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Total Income
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <h1>
                  $300
                </h1>
                <hr
                  className="MuiDivider-root-276 MuiDivider-default-277"
                />
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-3-233"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Total Expenditures
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <h1>
                  $250
                </h1>
                <hr
                  className="MuiDivider-root-276 MuiDivider-default-277"
                />
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-3-233"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Another box
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <h1>
                  $1000
                </h1>
                <hr
                  className="MuiDivider-root-276 MuiDivider-default-277"
                />
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216"
      >
        <div
          className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
        >
          <div
            className="my-pretty-chart-container"
          >
            <div
              id="chart"
              style={
                Object {
                  "height": "450px",
                  "width": "100%",
                }
              }
            >
              <div>
                Rendering Chart
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216"
      >
        <div
          align="stretch"
          className="MuiGrid-typeContainer-180 MuiGrid-spacing-xs-16-201"
        >
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-4-234"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Risk 1
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                >
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        Good to get started
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        Low risk
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        Low reward
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-301"
              >
                <button
                  className="MuiButtonBase-root-166 MuiButton-root-303 MuiButton-flatPrimary-306 MuiButton-dense-304 MuiCardActions-action-302"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-305"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-169"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-4-234"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Risk 2
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                >
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        Allows you to take more risk
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        Pays significant rewards
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        You might lose some money
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-301"
              >
                <button
                  className="MuiButtonBase-root-166 MuiButton-root-303 MuiButton-flatPrimary-306 MuiButton-dense-304 MuiCardActions-action-302"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-305"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-169"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-181 MuiGrid-grid-xs-12-216 MuiGrid-grid-sm-6-223 MuiGrid-grid-md-4-234"
          >
            <div
              className="MuiPaper-root-104 MuiPaper-shadow2-108 MuiPaper-rounded-105"
            >
              <div
                className="MuiCardContent-root-275 MuiCardHeader-root-269"
              >
                <div
                  className="MuiCardHeader-content-272"
                >
                  <span
                    className="MuiTypography-root-133 MuiTypography-headline-138 MuiCardHeader-title-273"
                  >
                    Risk 3
                  </span>
                  <span
                    className="MuiTypography-root-133 MuiTypography-body1-142 MuiTypography-colorSecondary-154 MuiCardHeader-subheader-274"
                  />
                </div>
              </div>
              <div
                className="MuiCardContent-root-275"
              >
                <ul
                  className="MuiList-root-281 MuiList-padding-282"
                >
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        $$$
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        More $$$
                      </h3>
                    </div>
                  </li>
                  <li
                    className="MuiListItem-root-285 MuiListItem-gutters-292 MuiListItem-default-288"
                    disabled={false}
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-168 MuiListItemIcon-root-295"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"
                      />
                    </svg>
                    <div
                      autoFocus={true}
                      className="MuiListItemText-root-296"
                      id="attr"
                    >
                      <h3
                        className="MuiTypography-root-133 MuiTypography-subheading-140 MuiListItemText-text-299"
                      >
                        You're fucking insane of you invest in this
                      </h3>
                    </div>
                  </li>
                </ul>
              </div>
              <div
                className="MuiCardActions-root-301"
              >
                <button
                  className="MuiButtonBase-root-166 MuiButton-root-303 MuiButton-flatPrimary-306 MuiButton-dense-304 MuiCardActions-action-302"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label-305"
                  >
                    Invest
                  </span>
                  <span
                    className="MuiTouchRipple-root-169"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Saldo Playground 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <table
      className="MuiTable-root-324"
    >
      <tbody
        className="MuiTableBody-root-325"
      >
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 MuiTableCell-paddingDefault-335"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            totalSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $774.93
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-76 MuiButton-root-339 MuiButton-raised-346"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-341"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Saldo Without total 1`] = `
<div
  className="MuiPaper-root-14 MuiPaper-shadow2-18 MuiPaper-rounded-15"
>
  <div
    className="MuiCardContent-root-96 MuiCardHeader-root-90"
  >
    <div
      className="MuiCardHeader-content-93"
    >
      <span
        className="MuiTypography-root-43 MuiTypography-headline-48 MuiCardHeader-title-94"
      >
        Saldo
      </span>
      <span
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorSecondary-64 MuiCardHeader-subheader-95"
      />
    </div>
  </div>
  <div
    className="MuiCardContent-root-96"
  >
    <table
      className="MuiTable-root-324"
    >
      <tbody
        className="MuiTableBody-root-325"
      >
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            investedSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $700.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            earnedSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $74.93
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
          >
            bonusSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 withStyles-TableCell--root-331 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
        <tr
          className="MuiTableRow-root-326"
        >
          <td
            className="MuiTableCell-root-332 MuiTableCell-paddingDefault-335"
          >
            reinvestedSharesValue
          </td>
          <td
            className="MuiTableCell-root-332 MuiTableCell-paddingDefault-335"
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            $0.00
          </td>
        </tr>
      </tbody>
    </table>
    <button
      className="MuiButtonBase-root-76 MuiButton-root-339 MuiButton-raised-346"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label-341"
      >
        Sell Shares
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Simple Percent Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;

exports[`Storyshots StockGraph Playground 1`] = `
<div
  className="my-pretty-chart-container"
>
  <div
    id="chart"
    style={
      Object {
        "height": "400px",
        "width": "100%",
      }
    }
  >
    <div>
      Rendering Chart
    </div>
  </div>
</div>
`;
